# msquared-agent

./: .env.example  .gitignore  Build MSquared governed brand agent.txt  MSquaredAgent.spec  README.md  pyproject.toml
config/: claim_bank.yaml  feature_flags.yaml  persona.yaml  risk_rules.yaml
data/: sample_intake.json
docs/: ADR-0001-portable-desktop-gui.md  ADR-0002-operator-diagnostics-and-release-guards.md  EMAIL_WORKFLOW.md  INCIDENT_ESCALATION.md  MSQUARED_GUARDRAILS.md  MSQUARED_PERSONA.md  X_WORKFLOW.md
prompts/: EMAIL_TRIAGE_PROMPT.md  MSQUARED_PRODUCT_CONTEXT.md  MSQUARED_SYSTEM_PROMPT.md  X_POST_PROMPT.md  X_REPLY_PROMPT.md
schemas/: approval_item.schema.json  email_action.schema.json  x_action.schema.json
scripts/: build_windows_exe.ps1  package_portable.ps1
src/msquared_agent/: __init__.py  action_preflight.py  action_router.py  agent.py  app_log.py  approval_queue.py  audit_store.py  claim_guard.py  connector_config.py  content_planner.py  desktop_ui.py  email_adapter.py  env_loader.py  feedback_store.py  intake_store.py  intake_triage.py  interactive_agent.py  legal_agent.py  monitor_intelligence.py  opt_out_registry.py  paths.py  persona.py  ui.py  (+6 more)
tests/: conftest.py  test_app_log.py  test_approval_queue.py  test_claim_guard.py  test_connector_config.py  test_email_adapter_transport.py  test_governed_pipeline.py  test_intake_triage.py  test_interactive_agent.py  test_monitor_intelligence.py  test_no_autopost_phase0.py  test_payloads_and_opt_out.py  test_product_knowledge.py  test_risk_classifier.py  test_text_hygiene.py  test_x_adapter.py
